# plymouth-preview

./: .editorconfig  .pre-commit-config.yaml  install.sh  plymouth-preview  pyproject.toml  readme.md  uninstall.sh
